ICA/bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "bookinfo.kindccm-8fb065a4766b.orb.local"
  - "productpage.bookinfo.svc.cluster.local"
  gateways:
  - istio-system/default # global listener for the kindccm domain with a shared cert
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
